--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -4,4 +4,5 @@ Vagrant.configure("2") do |config|
   config.vm.synced_folder "../uploads", "/uploads"
  # config.vm.network :forwarded_port, host: 4567, guest: 80
  config.vm.define :test1 do |test1|
+ end
 end
